[package]
name = "collatz-viz"
version = "0.1.0"
authors = ["Anthony McAtear <mcatear.anthony@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

plotters = "0.3.4"
itertools = "0.10.5"
lol_alloc = "0.3.0"
plotters-canvas = "0.3.0"
plotters-backend = "0.3.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
